# Manifold-Tracer

./: .atom-build.yml  .gitignore  Cargo.toml  LICENSE  README.md  a.txt
resources/: sphere_scene.ron
src/: lib.rs  main.rs
src/geometry/: mod.rs  sphere.rs
src/geometry/space/: manifold.rs
src/geometry/spherinder/: mesh.rs  mod.rs  spaces.rs  triangle.rs
src/geometry/spherinder/kernels/: mod.rs  open_cl_kernels.rs  trace_kernel.cl  trace_kernel.rs
src/geometry/three_sphere/: accelerator.rs  mesh.rs  mod.rs  object.rs  orientation.rs  primitives.rs  representation.rs  scene_description.rs
src/geometry/three_sphere/kernels/: mod.rs  open_cl_kernels.rs  sample_aggregator.cl  sample_aggregator.rs  shade_kernel.cl  shade_kernel.rs  trace_kernel.cl  trace_kernel.rs  wavefront.rs
src/math/: colliders.rs  colors.rs  mod.rs  quaternion.rs  ray.rs  vectorized_impls.rs  vectors.rs
src/math/geometry/: aabb.rs  mod.rs  rect.rs  sphere.rs  volumes.rs
src/rendering/: bvh.rs  camera.rs  materials.rs  mod.rs  perlin.rs  scene.rs  textures.rs
tests/: lib.rs
tests/geometry/: mod.rs
tests/geometry/three_sphere/: mod.rs  orientation.rs
