[package]
name = "manifold_tracer"
version = "0.1.0"
authors = ["John Churay <thechurroextrodinare@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
rand = { version="0.7", features=["small_rng"]}
rand_distr = "0.2.2"
indicatif = "0.13.0"
structopt = "0.3.5"
clap = { version = "2.33.0" }
